--- a/index.html
+++ b/index.html
@@ -13,5 +13,12 @@
       My Blog Site
     </h1>
   </header>
+  <main>
+    <article>
+      <div id="posts">
+
+      </div>
+    </article>
+  </main>
 </body>
 </html>
